bug fix : chrome alignment

--- a/src/components/keyboard/keyboard.module.css
+++ b/src/components/keyboard/keyboard.module.css
@@ -54,6 +54,7 @@
     text-align: center;
     flex-direction: column;
     justify-content: center;
+    align-items: center;
 }
 
 .btnBackground {
